--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,7 +2,7 @@
 <div>
     <label for="new-hero">Hero name: </label>
     <input id="new-hero" #heroName>
-    <button type="button" (click)="add(heroName.value); heroName.value=''" >
+    <button type="button" class="add-button" (click)="add(heroName.value); heroName.value=''" >
         Add hero
     </button>
 </div>
